--- a/Templates/WebServerinVPC-Demo.yaml
+++ b/Templates/WebServerinVPC-Demo.yaml
@@ -1,6 +1,6 @@
 AWSTemplateFormatVersion: 2010-09-09
-Description: AWS CloudFormation template for create a simple web server and test server with an S3 Bucket
-# Este es un Demo
+Description: >- 
+Este es un script de Demostración que implementa un web server con una aplicación web de ejemplo.
 Resources:
   PublicSubnet:
     Type: 'AWS::EC2::Subnet'
@@ -91,11 +91,7 @@ Resources:
           #!/bin/bash -xe
           yum update -y 
           yum install -y httpd php aws-cfn-bootstrap
-          #amazon-linux-extras install -y php7.2
-          # Install the files and packages from the metadata
-          #/opt/aws/bin/cfn-init -v --stack ${AWS::StackName} --resource WebServerInstance --configsets All --region ${AWS::Region}
-          # Signal the status from cfn-init
-          #/opt/aws/bin/cfn-signal -e $? --stack ${AWS::StackName} --resource WebServerInstance --region ${AWS::Region}
+          amazon-linux-extras install -y php7.2
           wget https://us-west-2-tcprod.s3.amazonaws.com/courses/AWS-100-CCA/v3.1.21/lab8-ha/scripts/phpapp.zip
           unzip phpapp.zip -d /var/www/html/
           chkconfig httpd on
